<resources>
    <string name="app_name">Contas</string>
    <string name="autor">Gustavo de Paula 1110482313003</string>
    <string name="contap">Conta Poupanca</string>
    <string name="contae">Conta Especial</string>
    <string name="cliente">Cliente</string>
    <string name="num_conta">Numero da Conta</string>
    <string name="saldo">Saldo</string>
    <string name="valor">Valor</string>
    <string name="limite">Limite</string>
    <string name="taxa">Taxa</string>
    <string name="sacar">Sacar</string>
    <string name="depositar">Depositar</string>
</resources>